Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3769

CID 1311647: Null pointer dereferences in HttpTransact.cc

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP

    Description

      Hi,
      
      Please find the latest report on new defect(s) introduced to Apache Traffic Server found with Coverity Scan.
      
      1 new defect(s) introduced to Apache Traffic Server found with Coverity Scan.
      
      
      New defect(s) Reported-by: Coverity Scan
      Showing 1 of 1 defect(s)
      
      
      ** CID 1311647:  Null pointer dereferences  (REVERSE_INULL)
      /proxy/http/HttpTransact.cc: 1596 in HttpTransact::ReDNSRoundRobin(HttpTransact::State *)()
      
      
      ________________________________________________________________________________________________________
      *** CID 1311647:  Null pointer dereferences  (REVERSE_INULL)
      /proxy/http/HttpTransact.cc: 1596 in HttpTransact::ReDNSRoundRobin(HttpTransact::State *)()
      1590         //  failure mark
      1591         s->current.server->clear_connect_fail();
      1592     
      1593         // Our ReDNS of the server succeeded so update the necessary
      1594         //  information and try again. Need to preserve the current port value if possible.
      1595         in_port_t server_port =
         CID 1311647:  Null pointer dereferences  (REVERSE_INULL)
         Null-checking "s->current.server" suggests that it may be null, but it has already been dereferenced on all paths leading to the check.
      1596           s->current.server ? s->current.server->dst_addr.host_order_port() : s->server_info.dst_addr.isValid() ?
      1597                                    s->server_info.dst_addr.host_order_port() :
      1598                                    s->hdr_info.client_request.port_get();
      1599     
      1600         ats_ip_copy(&s->server_info.dst_addr, s->host_db_info.ip());
      1601         s->server_info.dst_addr.port() = htons(server_port);
      
      
      ________________________________________________________________________________________________________
      To view the defects in Coverity Scan visit, https://scan.coverity.com/projects/431?tab=overview
      

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              zwoop Leif Hedstrom
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: