TS-3769: Fix coverity complaint about NULL reference.